--- a/dataSource/relational/src/main/resources/dameng-meta.properties
+++ b/dataSource/relational/src/main/resources/dameng-meta.properties
@@ -101,10 +101,10 @@ jdbc_support_special_char=false
 support_boundary_query=true
 
 # 单表最大列数
-max_column_num_limit=800
+max_column_num_limit=2000
 
 # 单行最大字节数
-max_single_row_size_limit=8195
+max_single_row_size_limit=8100
 
 BYTE=IGINX-BOOLEAN
 TINYINT=IGinX-BOOLEAN
@@ -124,7 +124,7 @@ IGinX-INTEGER=INTEGER
 IGinX-FLOAT=REAL
 IGinX-DOUBLE=DOUBLE
 IGinX-BOOLEAN=TINYINT
-IGinX-BINARY=VARCHAR2(4000)
+IGinX-BINARY=TEXT
 IGinX-LONG=BIGINT
 
 # 每种数据类型的大小
@@ -132,5 +132,5 @@ IGinX-INTEGER.size=4
 IGinX-FLOAT.size=4
 IGinX-DOUBLE.size=8
 IGinX-BOOLEAN.size=1
-IGinX-BINARY.size=800
+IGinX-BINARY.size=947
 IGinX-LONG.size=8
