--- a/test/src/test/resources/testConfig.properties
+++ b/test/src/test/resources/testConfig.properties
@@ -90,5 +90,6 @@ DBCE_test_way=oriHasDataExpHasData
 
 # TPC-H test
 query_ids=1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19_a,20,21,22,23,24
+IoTDB12_query_ids=1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19_a,20,21,22,23
 max_repetitions_num=10
 regression_threshold=0.3
