new failure status

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,3 +22,4 @@ jobs:
             metadata-matrix: '["zookeeper"]'
             os-matrix: '["macos-latest"]'
             close-optimizer: "true"
+            db-matrix: '["IoTDB12"]'
