rename output prefix param name

--- a/example/src/main/resources/TransformMixedPythonAndSQL.yaml
+++ b/example/src/main/resources/TransformMixedPythonAndSQL.yaml
@@ -28,7 +28,7 @@ taskList:
   dataFlowType: "stream"
   timeout: 10000000
   pyTaskName: "AddOneTransformer"
-  PyOutputPathPrefix: "addOne"
+  outputPrefix: "addOne"
 - taskType: "sql"
   timeout: 10000000
   sqlList:
