fix(relational): update dameng meta

--- a/dataSource/relational/src/main/resources/dameng-meta.properties
+++ b/dataSource/relational/src/main/resources/dameng-meta.properties
@@ -128,9 +128,10 @@ IGinX-BINARY=TEXT
 IGinX-LONG=BIGINT
 
 # 每种数据类型的大小
-IGinX-INTEGER.size=4
-IGinX-FLOAT.size=4
-IGinX-DOUBLE.size=8
-IGinX-BOOLEAN.size=1
+# 达梦加1用来表示列头
+IGinX-INTEGER.size=5
+IGinX-FLOAT.size=5
+IGinX-DOUBLE.size=9
+IGinX-BOOLEAN.size=2
 IGinX-BINARY.size=947
-IGinX-LONG.size=8
+IGinX-LONG.size=9
