recover dameng meta

--- a/dataSource/relational/src/main/resources/dameng-meta.properties
+++ b/dataSource/relational/src/main/resources/dameng-meta.properties
@@ -124,7 +124,7 @@ IGinX-INTEGER=INTEGER
 IGinX-FLOAT=REAL
 IGinX-DOUBLE=DOUBLE
 IGinX-BOOLEAN=TINYINT
-IGinX-BINARY=TEXT
+IGinX-BINARY=VARCHAR2(4000)
 IGinX-LONG=BIGINT
 
 # 每种数据类型的大小
@@ -133,5 +133,5 @@ IGinX-INTEGER.size=5
 IGinX-FLOAT.size=5
 IGinX-DOUBLE.size=9
 IGinX-BOOLEAN.size=2
-IGinX-BINARY.size=947
+IGinX-BINARY.size=800
 IGinX-LONG.size=9
