--- a/dataSource/relational/src/main/resources/mysql-meta.properties
+++ b/dataSource/relational/src/main/resources/mysql-meta.properties
@@ -75,7 +75,7 @@ not_regex_like_expression=%s NOT REGEXP %s
 # jdbc元数据获取是否支持特殊字符识别
 jdbc_support_special_char=true
 # 单表最大列数
-max_column_num_limit=1000
+max_column_num_limit=1015
 # 单行最大字节数
 max_single_row_size_limit=7900
 
@@ -96,7 +96,7 @@ IGinX-INTEGER=INTEGER
 IGinX-FLOAT=FLOAT(12,6)
 IGinX-DOUBLE=DOUBLE(22,11)
 IGinX-BOOLEAN=TINYINT
-IGinX-BINARY=TEXT
+IGinX-BINARY=VARCHAR(3000)
 IGinX-LONG=BIGINT
 
 # 每种数据类型的大小
@@ -104,5 +104,5 @@ IGinX-INTEGER.size=4
 IGinX-FLOAT.size=4
 IGinX-DOUBLE.size=8
 IGinX-BOOLEAN.size=1
-IGinX-BINARY.size=41
+IGinX-BINARY.size=1450
 IGinX-LONG.size=8
