feat(transform): allow sql stage after python (#605)
NOTE：目前的设计中，整个job是一条线性的流水线，只是在python task到sql task的衔接过程中，其output被暂存到临时表中，间接提供给sql task，而sql -> python或者python -> python都不需要借助临时表。从job中task的数据传递过程来看，sql任务只有输出没有输入，python任务既有输入也有输出，其输入数据来自上一个task（sql/python），其输出要么直接给下一个task，要么通过outputPrefix存入临时表。衔接在一个python task后的sql task被认为是需要python task的输出结果，而这种输出结果只能通过临时表间接传递，因此一个sql task之前的python task被要求必须设置outputPrefix属性。

关于流式与批式的说明：sql task只能是流式的，python task可以是流式，也可以是批式，如果python脚本是按表而不是按行计算，应该使用批式。

——不符合上述描述的用户行为，系统表现未知。

--- a/example/src/main/resources/TransformMixedPythonAndSQL.yaml
+++ b/example/src/main/resources/TransformMixedPythonAndSQL.yaml
@@ -23,18 +23,24 @@ taskList:
 - taskType: "sql"
   timeout: 10000000
   sqlList:
-  - "select value1, value2, value3, value4 from transform;"
+  - "SELECT s1, s2 FROM us.d1 WHERE key < 200;"
 - taskType: "python"
   dataFlowType: "stream"
   timeout: 10000000
   pyTaskName: "AddOneTransformer"
+  outputPrefix: "addOne"
+- taskType: "sql"
+  timeout: 10000000
+  sqlList:
+    - "SELECT s1, s1, s2 FROM addOne.us.d1;"
 - taskType: "python"
   dataFlowType: "batch"
   timeout: 10000000
-  pyTaskName: "SumTransformer"
+  pyTaskName: "SumTransformerNoKey"
 - taskType: "python"
   dataFlowType: "stream"
   timeout: 10000000
   pyTaskName: "RowSumTransformer"
 exportType: "file"
-exportFile: "/Users/cauchy-ny/Downloads/export_file_sum_sql.txt"
+exportFile: "test/src/test/resources/transform/export_file_mixed_python_And_SQL.txt"
+
