--- a/test/src/test/resources/transform/TransformMixedPythonAndSQL.yaml
+++ b/test/src/test/resources/transform/TransformMixedPythonAndSQL.yaml
@@ -8,13 +8,19 @@ taskList:
   dataFlowType: "stream"
   timeout: 10000000
   pyTaskName: "AddOneTransformer"
+  outputPrefix: "addOne"
+- taskType: "sql"
+  timeout: 10000000
+  sqlList:
+    - "SELECT s1, s1, s2 FROM addOne.us.d1;"
 - taskType: "python"
   dataFlowType: "batch"
   timeout: 10000000
-  pyTaskName: "SumTransformer"
+  pyTaskName: "SumTransformerNoKey"
 - taskType: "python"
   dataFlowType: "stream"
   timeout: 10000000
   pyTaskName: "RowSumTransformer"
 exportType: "file"
-exportFile: "test/src/test/resources/transform/export_file_mixed_python_jobs_by_yaml.txt"
+exportFile: "test/src/test/resources/transform/export_file_mixed_python_And_SQL.txt"
+
