--- a/example/src/main/resources/TransformJobExample.yaml
+++ b/example/src/main/resources/TransformJobExample.yaml
@@ -20,7 +20,7 @@
 
 ---
 taskList:
-- taskType: "sql"
+- taskType: "iginx"
   timeout: 10000000
   sqlList:
   - "select value1, value2, value3, value4 from transform;"
