--- a/test/src/test/resources/transform/TransformMultiplePythonJobs.yaml
+++ b/test/src/test/resources/transform/TransformMultiplePythonJobs.yaml
@@ -1,6 +1,6 @@
 ---
 taskList:
-- taskType: "sql"
+- taskType: "iginx"
   timeout: 10000000
   sqlList:
   - "SELECT s1, s2 FROM us.d1 WHERE key < 200;"
