ci: unify the runner of oracle

--- a/.github/actions/service/oracle/action.yaml
+++ b/.github/actions/service/oracle/action.yaml
@@ -11,12 +11,25 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - name: Create Config for dameng docker compose
+      shell: bash
+      working-directory: ${{ github.workspace }}
+      run: |
+        for port in ${{ inputs.ports }}; do
+          mkdir -p $port/volumes/oradata
+          sudo chmod -R 777 $port/volumes/oradata
+          cp -f docker/oracle/docker-compose.yml $port/docker-compose.yml
+          sed -i"" -e "s/1521:1521/$port:1521/g" $port/docker-compose.yml
+          sed -i"" -e "s/container_name: oracle23/container_name: ${{ inputs.version }}-$port/g" $port/docker-compose.yml
+          df -h $port/volumes/oradata
+        done
+        echo "docker-compose.yml created successfully"
     - if: runner.os == 'Linux' || runner.os == 'macOS'
       name: Start Oracle container
       shell: bash
       run: |
         for port in ${{ inputs.ports }}; do
-           docker run -d --name ${{ inputs.version }}-$port -p $port:1521 -e ORACLE_PDB=ORCLPDB -e ORACLE_PWD=ORCLPWD container-registry.oracle.com/database/free:23.5.0.0-lite
+          sudo docker compose -f $port/docker-compose.yml up -d
         done
     - if: runner.os == 'Linux' || runner.os == 'macOS'
       name: Verify Oracle Database is running
@@ -36,12 +49,13 @@ runs:
             fi
           done
         done
+        docker ps
     - if: runner.os == 'Windows'
       name: Start Oracle container
       shell: wsl-bash {0}
       run: |
         for port in ${{ inputs.ports }}; do
-           docker run -d --name "${{ inputs.version }}-$port" -p $port:1521 -e ORACLE_PDB=ORCLPDB -e ORACLE_PWD=ORCLPWD container-registry.oracle.com/database/free:23.5.0.0-lite                
+          sudo docker compose -f $port/docker-compose.yml up -d
         done
     - if: runner.os == 'Windows'
       name: Verify Oracle Database is running
@@ -61,4 +75,4 @@ runs:
           fi
           done
         done
-        docker ps -a
+        docker ps
