--- a/.github/actions/dbRunner/action.yml
+++ b/.github/actions/dbRunner/action.yml
@@ -102,10 +102,10 @@ runs:
 
         - if: (inputs.DB-name=='IoTDB12' || inputs.DB-name=='Mix-IoTDB12-InfluxDB') && (runner.os == 'Windows')
           name: Run DB
-          shell: wsl-bash {0}
+          shell: cmd
           working-directory: ${{ github.workspace }}
           run: |
-              .github/scripts/dataSources/startup/iotdb12_windows.sh ${{ inputs.IoTDB12-ports }}
+            .github\scripts\dataSources\startup\iotdb12_windows.bat ${{ inputs.IoTDB12-ports }}
 
         - if: inputs.DB-name=='MongoDB'
           name: Setup DB
