--- a/.github/actions/service/dameng/action.yml
+++ b/.github/actions/service/dameng/action.yml
@@ -43,7 +43,7 @@ runs:
           run: |
               for port in ${{ inputs.ports }}; do
                 sudo chown -R $(whoami) $port/
-                sudo docker compose -f $port/docker-compose.yml up -d
+                sudo nohup docker compose -f $port/docker-compose.yml up -d
               done
               sleep 10
               docker ps -a
@@ -75,7 +75,7 @@ runs:
           run: |
               for port in ${{ inputs.ports }}; do
                 sudo chown -R $(whoami) $port/
-                sudo docker compose -f $port/docker-compose.yml up -d
+                sudo nohup docker compose -f $port/docker-compose.yml up -d
               done
               sleep 30
               docker ps -a
