ci: free disk space, unify Oracle runner & fix Dameng volume mapping (#656)
* ci: fix the volume map of dameng

* ci: unify the runner of oracle

* ci: install docker-compose

* ci: free disk space

* format

* ci: fix the iotdb runner on windows

* ci: split iotdb runner

* ci: install wsl

* ci: install wsl

* ci: install wsl

* ci: install wsl

* ci: adjust iotdb setup

* ci: use cmd to run iotdb

* ci: bash run start-server.sh

* ci: add log

* ci: adjust iotdb setup

* ci: adjust iotdb setup

* ci: restore

* ci: move the download of iotdb from IGinX-benchmarks to IGinX-resources

* ci: fix the runner of oracle in windows

* ci: increase the timeout of iginx_windows.sh

---------

Co-authored-by: Yuqing Zhu <yuqing.zhu@139.com>

--- a/.github/actions/service/dameng/action.yml
+++ b/.github/actions/service/dameng/action.yml
@@ -30,15 +30,10 @@ runs:
           working-directory: ${{ github.workspace }}
           run: |
               for port in ${{ inputs.ports }}; do
-                mkdir -p $port
-                mkdir -p volumes$port
-                mkdir -p volumes$port/etcd
-                mkdir -p volumes$port/minio
-                mkdir -p volumes$port/dameng
-                cp -f docker/dameng/docker-compose.yml $port/docker-compose-$port.yml
-                sed -i"" -e "s/5236:5236/$port:5236/g" $port/docker-compose-$port.yml
-                sed -i"" -e "s/\/volumes/\/volumes$port/g" $port/docker-compose-$port.yml
-                sed -i"" -e "s/container_name: dm8/container_name: ${{ inputs.version }}-$port/g" $port/docker-compose-$port.yml
+                mkdir -p $port/volumes/dameng
+                cp -f docker/dameng/docker-compose.yml $port/docker-compose.yml
+                sed -i"" -e "s/5236:5236/$port:5236/g" $port/docker-compose.yml
+                sed -i"" -e "s/container_name: dm8/container_name: ${{ inputs.version }}-$port/g" $port/docker-compose.yml
               done
               echo "docker-compose.yml created successfully"
 
@@ -48,7 +43,7 @@ runs:
           run: |
               for port in ${{ inputs.ports }}; do
                 sudo chown -R $(whoami) $port/
-                sudo nohup docker compose -f $port/docker-compose-$port.yml up -d
+                sudo nohup docker compose -f $port/docker-compose.yml up -d
               done
               sleep 10
               docker ps -a
@@ -80,7 +75,7 @@ runs:
           run: |
               for port in ${{ inputs.ports }}; do
                 sudo chown -R $(whoami) $port/
-                sudo nohup docker compose -f $port/docker-compose-$port.yml up -d
+                sudo nohup docker compose -f $port/docker-compose.yml up -d
               done
               sleep 30
               docker ps -a
