--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -41,6 +41,13 @@ inputs:
 runs:
     using: "composite"
     steps:
+        - if: runner.os == 'Linux'
+          name: Free Disk Space
+          shell: bash
+          run: |
+              sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQL
+              sudo docker image prune --all --force || true
+
         # need to set up timezone and enlarge JVM heap size manually on windows
         - if: runner.os == 'Windows'
           name: Set Dynamic Timezone
