feat(relational): add relational storage table suffix test & update meta (#651)
* fix(relational): close relational storage leak detection & add table suffix test

* fix(relational): update meta

* fix(relational): update meta

* fix(relational): update oracle meta

* fix(relational): update oracle meta

* fix(relational): refactor getFullJoinTables to support both full outer join and left join + union emulation while the logical table is split into several table

* fix(test): add wide column group test

* fix(test): add wide column group test

* fix(relational): update dameng meta

* fix(relational): do not full join if only one physical table

* fix(relational): update pgsql meta

* recover dameng meta

* fix(relational): optimize splitAndMergeQueryPatterns

* fix(relational): init connection

* fix(relational): update dameng meta

* fix(relational): update meta

---------

Co-authored-by: Yuqing Zhu <yuqing.zhu@139.com>

--- a/dataSource/relational/src/main/resources/mysql-meta.properties
+++ b/dataSource/relational/src/main/resources/mysql-meta.properties
@@ -75,9 +75,9 @@ not_regex_like_expression=%s NOT REGEXP %s
 # jdbc元数据获取是否支持特殊字符识别
 jdbc_support_special_char=true
 # 单表最大列数
-max_column_num_limit=800
+max_column_num_limit=1015
 # 单行最大字节数
-max_single_row_size_limit=3900
+max_single_row_size_limit=7900
 
 support_boundary_query=true
 
@@ -92,12 +92,11 @@ FLOAT=IGinX-FLOAT
 DOUBLE=IGinX-DOUBLE
 DECIMAL=IGinX-DOUBLE
 
-
 IGinX-INTEGER=INTEGER
 IGinX-FLOAT=FLOAT(12,6)
 IGinX-DOUBLE=DOUBLE(22,11)
 IGinX-BOOLEAN=TINYINT
-IGinX-BINARY=TEXT
+IGinX-BINARY=VARCHAR(3000)
 IGinX-LONG=BIGINT
 
 # 每种数据类型的大小
@@ -105,5 +104,5 @@ IGinX-INTEGER.size=4
 IGinX-FLOAT.size=4
 IGinX-DOUBLE.size=8
 IGinX-BOOLEAN.size=1
-IGinX-BINARY.size=20
+IGinX-BINARY.size=1450
 IGinX-LONG.size=8
