--- a/dataSource/relational/src/main/resources/dameng-meta.properties
+++ b/dataSource/relational/src/main/resources/dameng-meta.properties
@@ -101,10 +101,10 @@ jdbc_support_special_char=false
 support_boundary_query=true
 
 # 单表最大列数
-max_column_num_limit=800
+max_column_num_limit=2000
 
 # 单行最大字节数
-max_single_row_size_limit=8195
+max_single_row_size_limit=8100
 
 BYTE=IGINX-BOOLEAN
 TINYINT=IGinX-BOOLEAN
@@ -128,9 +128,10 @@ IGinX-BINARY=VARCHAR2(4000)
 IGinX-LONG=BIGINT
 
 # 每种数据类型的大小
-IGinX-INTEGER.size=4
-IGinX-FLOAT.size=4
-IGinX-DOUBLE.size=8
-IGinX-BOOLEAN.size=1
-IGinX-BINARY.size=800
-IGinX-LONG.size=8
+# 达梦加1用来表示列头
+IGinX-INTEGER.size=5
+IGinX-FLOAT.size=5
+IGinX-DOUBLE.size=9
+IGinX-BOOLEAN.size=2
+IGinX-BINARY.size=1100
+IGinX-LONG.size=9
