--- a/conf/config.properties
+++ b/conf/config.properties
@@ -300,3 +300,16 @@ enableEnvParameter=false
 
 # 读取csv文件时，每批数据的行数
 batchSizeImportCsv=10000
+
+##########################################
+### IGinX启动时未连接上的存储引擎的重连配置
+##########################################
+
+# 初始重连间隔（单位: s）
+initialReconnectInterval=2
+
+# 最大重连间隔（单位: s）
+maxReconnectInterval=128
+
+## 重连间隔增长倍数
+reconnectBackoffMultiplier=2
