--- a/.github/workflows/restart-test.yml
+++ b/.github/workflows/restart-test.yml
@@ -86,7 +86,7 @@ jobs:
             - name: Change IGinX-6888 config
               uses: ./.github/actions/edit
               with:
-                  paths: /conf/config.properties
+                  paths: conf/config.properties
                   statements: |
                       s/client.connectPool.maxTotal=100/client.connectPool.maxTotal=100,127.0.0.1#6667#iotdb12#username=root#password=root#sessionPoolSize=20#has_data=false#is_read_only=false/g
                       s/replicaNum=0/replicaNum=1/g
