test client recognize delimiter(in RecognizeDelimiterIT)

--- a/.github/workflows/standalone-test.yml
+++ b/.github/workflows/standalone-test.yml
@@ -93,6 +93,7 @@ jobs:
               if: always()
               shell: bash -el {0}
               run: |
+                  mvn test -q -Dtest=RecognizeDelimiterIT -DfailIfNoTests=false -P-format
                   if [ "$RUNNER_OS" == "Linux" ]; then
                     chmod +x "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_recognize_delimiter.sh"
                     "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_recognize_delimiter.sh" ${VERSION}
@@ -213,14 +214,14 @@ jobs:
                   work-name: restart-iginx-meta
                   metadata: ${{ matrix.metadata }}
 
-            - name: TestController IT
-              if: always()
-              shell: bash -el {0}
-              env:
-                  METADATA_STORAGE: ${{ matrix.metadata }}
-              run: |
-                  chmod +x "${GITHUB_WORKSPACE}/.github/scripts/test/test_union.sh"
-                  mvn test -q -Dtest=Controller -DfailIfNoTests=false -P-format
+            #            - name: TestController IT
+            #              if: always()
+            #              shell: bash -el {0}
+            #              env:
+            #                  METADATA_STORAGE: ${{ matrix.metadata }}
+            #              run: |
+            #                  chmod +x "${GITHUB_WORKSPACE}/.github/scripts/test/test_union.sh"
+            #                  mvn test -q -Dtest=Controller -DfailIfNoTests=false -P-format
 
             - name: Show IGinX log
               if: always()
