only test ubuntu

--- a/.github/workflows/DB-CE.yml
+++ b/.github/workflows/DB-CE.yml
@@ -144,9 +144,23 @@ jobs:
                   file: ./**/target/site/jacoco/jacoco.xml
                   name: codecov
 
-            - name: Upload surefire reports
+            - name: Find failed test reports
               if: always()
+              id: failed_reports
+              run: |
+                mkdir -p failed-reports
+                find . -type f -path "*/target/surefire-reports/*.txt" -o -path "*/target/surefire-reports/*.xml" | while read f; do
+                  if grep -qE "FAILURE|ERROR|<failure>|<error>" "$f"; then
+                    mkdir -p "$(dirname failed-reports/$f)"
+                    cp "$f" "failed-reports/$f"
+                  fi
+                done
+                echo "FAILED_REPORTS=$(find failed-reports -type f | wc -l)" >> $GITHUB_ENV
+
+            - name: Upload failed test reports
+              if: always() && env.FAILED_REPORTS != '0'
               uses: actions/upload-artifact@v4
               with:
-                  name: surefire-reports
-                  path: target/surefire-reports/*
+                name: failed-surefire-reports
+                path: failed-reports/
+
