Fix config key replacement and adjust test sleep duration

--- a/.github/actions/confWriter/action.yml
+++ b/.github/actions/confWriter/action.yml
@@ -266,7 +266,7 @@ runs:
                   s/dummy.struct=[^#]*/dummy.struct=LegacyParquet/g
                   s/chunk_size_in_bytes=[0-9]*/chunk_size_in_bytes=8/g
                   s/write.buffer.size=[0-9]*/write.buffer.size=1048576/g
-                  s/data.config.write.buffer.timeout=[0-9]*s/write.buffer.timeout=0/g
+                  s/data.config.write.buffer.timeout=[0-9]*s/data.config.write.buffer.timeout=0/g
                   s/client.connectPool.maxTotal=[0-9]*/client.connectPool.maxTotal=2/g
 
         - name: Set Read-Only
