--- a/test/pom.xml
+++ b/test/pom.xml
@@ -74,6 +74,14 @@
             <groupId>cn.edu.tsinghua</groupId>
             <artifactId>neo4j</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-compress</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.tukaani</groupId>
+            <artifactId>xz</artifactId>
+        </dependency>
     </dependencies>
 
     <repositories>
