--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -126,6 +126,8 @@ runs:
               which python
               python -m pip install --upgrade pip
               pip install -r requirements.txt
+              cd ${{ steps.project.outputs.workspace }}/udf_funcs/iginx_udf
+              pip install -e .
 
         - if: inputs.free-thread-python-required=='true'
           name: Install free-thread python
