--- a/.github/actions/service/freeThreadConda/action.yml
+++ b/.github/actions/service/freeThreadConda/action.yml
@@ -16,6 +16,10 @@ runs:
               conda-remove-defaults: "true"
               run-post: "false"
 
+        - name: Get project info
+          id: project
+          uses: ./.github/actions/project
+
         # currently we can only install free-thread python 3.13 by conda-forge. latest miniconda only supports 3.12
         # thus in action steps ahead, remember to 'conda activate $ENV_NAME' at start if conda should be used
         - name: Check channels & install python3.13
