--- a/docker/onlyIginx/Dockerfile-iginx
+++ b/docker/onlyIginx/Dockerfile-iginx
@@ -3,7 +3,7 @@ COPY . /root/iginx
 WORKDIR /root/iginx
 RUN mvn clean package -DskipTests -P-format
 
-FROM openjdk:11-jre-slim
+FROM eclipse-temurin:11-jre
 COPY --from=builder /root/iginx/core/target/iginx-core-0.9.0-SNAPSHOT /iginx
 # 安装 Python 3.8, pip 并安装所需的 Python 包
 
