refactor(pr662): refactor CLI input handling with state pattern & refractor CLI tests (#666)
基于状态模式重构了 PR#662，优化客户端对语句分号的识别逻辑。
重构并整合了客户端测试，将原先的脚本执行方式改为代码内执行，现在只需启动一个 ClientLauncher 即可模拟客户端测试。

--- a/.github/workflows/standalone-test.yml
+++ b/.github/workflows/standalone-test.yml
@@ -94,16 +94,6 @@ jobs:
               shell: bash -el {0}
               run: |
                   mvn test -q -Dtest=UDFPathIT -DfailIfNoTests=false -P-format
-                  if [ "$RUNNER_OS" == "Linux" ]; then
-                    chmod +x "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_py_register.sh"
-                    "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_py_register.sh" ${VERSION}
-                  elif [ "$RUNNER_OS" == "Windows" ]; then
-                    chmod +x "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_py_register_windows.sh"
-                    "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_py_register_windows.sh" ${VERSION}
-                  elif [ "$RUNNER_OS" == "macOS" ]; then
-                    chmod +x "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_py_register_macos.sh"
-                    "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_py_register_macos.sh" ${VERSION}
-                  fi
 
             # two steps:
             # 1. test relative path
@@ -111,18 +101,7 @@ jobs:
             - name: Run Transform Job tests
               shell: bash -el {0}
               run: |
-                  mvn test -q -Dtest=TransformJobPathIT#prepare -DfailIfNoTests=false -P-format
-                  if [ "$RUNNER_OS" == "Linux" ]; then
-                    chmod +x "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_job_register.sh"
-                    "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_job_register.sh" ${VERSION}
-                  elif [ "$RUNNER_OS" == "Windows" ]; then
-                    chmod +x "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_job_register_windows.sh"
-                    "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_job_register_windows.sh" ${VERSION}
-                  elif [ "$RUNNER_OS" == "macOS" ]; then
-                    chmod +x "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_job_register_macos.sh"
-                    "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_job_register_macos.sh" ${VERSION}
-                  fi
-                  mvn test -q -Dtest=TransformJobPathIT#verifyResult -DfailIfNoTests=false -P-format
+                  mvn test -q -Dtest=TransformJobPathIT -DfailIfNoTests=false -P-format
                   mvn test -q -Dtest=TransformJobRestartIT#prepare -DfailIfNoTests=false -P-format
 
             - name: Stop IGinX
@@ -145,52 +124,6 @@ jobs:
               shell: bash
               run: |
                   cat iginx-*.log
-
-            - name: set client test context
-              uses: ./.github/actions/context
-              with:
-                  work-name: restart-iginx-meta
-                  metadata: ${{ matrix.metadata }}
-
-            - name: set client test context
-              uses: ./.github/actions/context
-              with:
-                  DB-name: ${{ matrix.DB-name }}
-                  shell: client-before
-
-            # TODO: extract it to a separate job to test
-            # large image export only tested in FileSystem
-            - name: Test Client Export File
-              shell: bash -el {0}
-              run: |
-                  if [[ "${{ matrix.DB-name }}" == "FileSystem" ]]; then
-                      mvn test -q -Dtest=ExportFileIT -DfailIfNoTests=false -P-format
-                  else
-                      mvn test -q -Dtest=ExportFileIT#checkExportByteStream -DfailIfNoTests=false -P-format
-                      mvn test -q -Dtest=ExportFileIT#checkExportCsv -DfailIfNoTests=false -P-format
-                  fi
-
-            - name: Stop IGinX and Metadata, Clear Metadata Data, then Start Them
-              uses: ./.github/actions/context
-              with:
-                  work-name: restart-iginx-meta
-                  metadata: ${{ matrix.metadata }}
-
-            - name: set client test context
-              uses: ./.github/actions/context
-              with:
-                  shell: client-after
-
-            - name: test event expansion support
-              uses: ./.github/actions/context
-              with:
-                  shell: client-event-expansion
-
-            - name: Test Client Import File
-              if: always()
-              shell: bash -el {0}
-              run: |
-                  mvn test -q -Dtest=ImportFileIT -DfailIfNoTests=false -P-format
 
             - name: clean metadata and restart IGinX
               uses: ./.github/actions/context
