--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -100,20 +100,20 @@ jobs:
             functest: "NewSessionIT,SQLCompareIT,TagIT,RestIT,TransformIT,UDFIT,RestAnnotationIT,SQLSessionIT,SQLSessionPoolIT,SessionV2IT,CompactionIT,TimePrecisionIT,PySessionIT"
             timeout-minutes: 120
             close-optimizer: "true"
-    standalone-test-vectordb:
-        uses: ./.github/workflows/standalone-test.yml
-        with:
-            metadata-matrix: '["zookeeper"]'
-            os-matrix: '["ubuntu-latest", "windows-latest"]'
-            db-matrix: '["VectorDB"]'
-            timeout-minutes: 300
-    standalone-test-no-optimizer-vectordb:
-        uses: ./.github/workflows/standalone-test-no-optimizer.yml
-        with:
-            metadata-matrix: '["zookeeper"]'
-            os-matrix: '["ubuntu-latest", "windows-latest"]'
-            db-matrix: '["VectorDB"]'
-            timeout-minutes: 300
+    #    standalone-test-vectordb:
+    #        uses: ./.github/workflows/standalone-test.yml
+    #        with:
+    #            metadata-matrix: '["zookeeper"]'
+    #            os-matrix: '["ubuntu-latest", "windows-latest"]'
+    #            db-matrix: '["VectorDB"]'
+    #            timeout-minutes: 300
+    #    standalone-test-no-optimizer-vectordb:
+    #        uses: ./.github/workflows/standalone-test-no-optimizer.yml
+    #        with:
+    #            metadata-matrix: '["zookeeper"]'
+    #            os-matrix: '["ubuntu-latest", "windows-latest"]'
+    #            db-matrix: '["VectorDB"]'
+    #            timeout-minutes: 300
     db-ce-vectordb:
         uses: ./.github/workflows/DB-CE.yml
         with:
@@ -141,11 +141,11 @@ jobs:
         uses: ./.github/workflows/free-thread-test.yml
         with:
             metadata-matrix: '["zookeeper"]'
-    tpc-h-test:
-        uses: ./.github/workflows/tpc-h.yml
-        with:
-            os-matrix: '["ubuntu-latest"]'
-            metadata-matrix: '["zookeeper"]'
+    #    tpc-h-test:
+    #        uses: ./.github/workflows/tpc-h.yml
+    #        with:
+    #            os-matrix: '["ubuntu-latest"]'
+    #            metadata-matrix: '["zookeeper"]'
     cluster-test:
         uses: ./.github/workflows/cluster-test.yml
     restart-test:
@@ -160,14 +160,14 @@ jobs:
             #            - standalone-test-no-optimizer
             - db-ce
             - db-ce-no-optimizer
-            - standalone-test-vectordb
-            - standalone-test-no-optimizer-vectordb
+            #            - standalone-test-vectordb
+            #            - standalone-test-no-optimizer-vectordb
             - db-ce-vectordb
             - db-ce-no-optimizer-vectordb
             - remote-test
             - assembly-test
             - free-thread-test
-            - tpc-h-test
+            #            - tpc-h-test
             #            - standalone-test-no-mac-relational
             #            - standalone-test-no-optimizer-no-mac-relational
             - db-ce-Dameng
